First cookiecutter option

--- a/source/notebooks/lecture07_git_and_github_cont.ipynb
+++ b/source/notebooks/lecture07_git_and_github_cont.ipynb
@@ -1274,9 +1274,10 @@
     "- `git add` puts files in the staging area.\n",
     "- `git commit` saves the staged content as a new commit in the local repository\n",
     "- `git diff` displays differences between commits.\n",
-    "- `git checkout` recovers old versions of files.\n",
+    "- `git checkout` recovers old versions of files and switches between branches.\n",
     "- `git log --oneline` displays one line describing each commit in the repo.\n",
     "- The `.gitignore` file tells Git what files to ignore.\n",
+    "- `git branch -a` shows all branches, both local and remote.\n",
     "- `git clone` copies a remote repository to create a local repository with a remote called `origin` automatically set up.\n",
     "- Conflicts occur when two or more people change the same file(s) at the same time.\n",
     "- The version control system does not allow people to overwrite each other’s changes blindly, but highlights conflicts so that they can be resolved.\n",
