Changed to our cookiecutter

--- a/source/notebooks/lecture08_cookiecutter_and_IDEs.ipynb
+++ b/source/notebooks/lecture08_cookiecutter_and_IDEs.ipynb
@@ -115,10 +115,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll download a cookiecutter project from a [group](http://www.choderalab.org/) that does computational chemistry and molecular dynamics and cares about [best practices in software development](https://github.com/choderalab/software-development).\n",
+    "We'll download a cookiecutter project based on another project from a [group](http://www.choderalab.org/) that does computational chemistry and molecular dynamics and cares about [best practices in software development](https://github.com/choderalab/software-development).\n",
     "\n",
     "~~~\n",
-    "$ cookiecutter gh:choderalab/cookiecutter-compchem\n",
+    "$ cookiecutter gh:team-mayes/cookiecutter-compchem\n",
     "project_name [project_name]: arthritis_proj\n",
     "repo_name [arthritis_proj]: \n",
     "first_module_name [arthritis_proj]: data_proc\n",
