--- a/source/notebooks/lecture08_cookiecutter_and_IDEs.ipynb
+++ b/source/notebooks/lecture08_cookiecutter_and_IDEs.ipynb
@@ -247,6 +247,20 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "We also have a warning that we need to configure our python editor.\n",
+    "\n",
+    "Click on the project name, and press F4. That will bring up the Project Structure Window. Let's choose Python 3 for our SDK for both the Project Settings and Platform settings.\n",
+    "\n",
+    "![IDEA Ultimate](images/lect08_jb-proj-set.png)\n",
+    "![IDEA Ultimate](images/lect08_jb-plat-set.png)\n",
+    "\n",
+    "After pressing `OK`, the python interpreter warning should disappear."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
