Added function to save csv output and built html

--- a/source/notebooks/lecture08_cookiecutter_and_IDEs.ipynb
+++ b/source/notebooks/lecture08_cookiecutter_and_IDEs.ipynb
@@ -15,7 +15,8 @@
     "\n",
     "- https://cookiecutter.readthedocs.io/en/latest/readme.html\n",
     "- https://www.jetbrains.com/help/pycharm/meet-pycharm.html\n",
-    "- http://swcarpentry.github.io/python-novice-inflammation/"
+    "- http://swcarpentry.github.io/python-novice-inflammation/\n",
+    "- https://matplotlib.org/users/pyplot_tutorial.html"
    ]
   },
   {
@@ -468,9 +469,172 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These are exactly the numbers that I calculated before. Hooray!\n",
+    "These are exactly the numbers that I calculated before. Hooray! \n",
     "\n",
-    "Next up: Making tests, plotting, and more fun!"
+    "It is fine to just print this when we have a small number of patients, but it probably would be more helpful if we save the data to a file. As you might expect, numpy has a `savetxt` function. First, we need to have a file name for saveing. I want it to be the base name of the input file (`sample_data` in this case) to which I'll add `_stats.csv`.\n",
+    "\n",
+    "~~~~\n",
+    "out_fname = os.path.basename(args.csv_data)\n",
+    "~~~~\n",
+    "\n",
+    "`os` is a library that we don't have yet, so it is underlined in red. If we click on it, we'll get a red light bulb. Often this is helpful, but I don't see the option to import the `os` library, so I'll do that myself at the top of the file.\n",
+    "\n",
+    "![Screen shot](images/lect08_os-red.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, I'll remove the extension, and add the suffix `_stats`. Since I'll want to use this base name again (when saving an image), I'll add the `.csv` extension separately.\n",
+    "\n",
+    "![Screen shot](images/lect08_np-savetxt.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Screen shot](images/lect08_np-savetxt.png)\n",
+    "\n",
+    "Now, let's add a function that will plot the data. Again, we'll come back to more information about different options in the imported package. For now, I'll give you what is needed for this example as part of the complete code below:"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "\"\"\"\n",
+    "data_proc.py\n",
+    "Demo including:\n",
+    " - reading in numeric data from a csv\n",
+    " - calculating the mean, max, and min per row\n",
+    " - plotting the results\n",
+    "\"\"\"\n",
+    "\n",
+    "import sys\n",
+    "import argparse\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "\n",
+    "SUCCESS = 0\n",
+    "IO_ERROR = 2\n",
+    "\n",
+    "DEF_DATA_FILE = 'data.csv'\n",
+    "\n",
+    "\n",
+    "def warning(*objs):\n",
+    "    \"\"\"Writes a message to stderr.\"\"\"\n",
+    "    print(\"WARNING: \", *objs, file=sys.stderr)\n",
+    "\n",
+    "\n",
+    "def data_analysis(data_array):\n",
+    "    \"\"\"\n",
+    "    Finds the average, min, and max for each row of the given array\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    data_array : numpy array of patient data (one line per patient, daily measurements) in plasma inflammation units\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    data_stats : numpy array\n",
+    "        array with same number of rows as data_array, and columns for average, max, and min values (in that order)\n",
+    "    \"\"\"\n",
+    "    num_patients, num_days = data_array.shape\n",
+    "    data_stats = np.zeros((num_patients, 3))\n",
+    "\n",
+    "    data_stats[:, 0] = np.mean(data_array, axis=1)\n",
+    "    data_stats[:, 1] = np.max(data_array, axis=1)\n",
+    "    data_stats[:, 2] = np.min(data_array, axis=1)\n",
+    "\n",
+    "    return data_stats\n",
+    "\n",
+    "\n",
+    "def parse_cmdline(argv):\n",
+    "    \"\"\"\n",
+    "    Returns the parsed argument list and return code.\n",
+    "    `argv` is a list of arguments, or `None` for ``sys.argv[1:]``.\n",
+    "    \"\"\"\n",
+    "    if argv is None:\n",
+    "        argv = sys.argv[1:]\n",
+    "\n",
+    "    # initialize the parser object:\n",
+    "    parser = argparse.ArgumentParser()\n",
+    "    parser.add_argument(\"-c\", \"--csv_data_file\", help=\"The location of the csv file with data to analyze\",\n",
+    "                        default=DEF_DATA_FILE)\n",
+    "    args = None\n",
+    "    try:\n",
+    "        args = parser.parse_args(argv)\n",
+    "        args.csv_data = np.loadtxt(fname=args.csv_data_file, delimiter=',')\n",
+    "    except IOError as e:\n",
+    "        warning(\"Problems reading file:\", e)\n",
+    "        parser.print_help()\n",
+    "        return args, IO_ERROR\n",
+    "\n",
+    "    return args, SUCCESS\n",
+    "\n",
+    "\n",
+    "def plot_stats(base_f_name, data_stats):\n",
+    "    \"\"\"\n",
+    "    Makes a plot of the mean, max, and min inflammation per patient\n",
+    "    :param base_f_name: str of base output name (without extension)\n",
+    "    :param data_stats: numpy array with shape (num_patients, num_stats) where num_stats = 3 (mean, max, min)\n",
+    "    :return: saves a png file\n",
+    "    \"\"\"\n",
+    "    num_patients, num_stats = data_stats.shape\n",
+    "    x_axis = np.arange(1, num_patients + 1, 1)\n",
+    "    # red dashes, blue squares and green triangles\n",
+    "    plt.plot(x_axis, data_stats[:, 0], 'bs',\n",
+    "             x_axis, data_stats[:, 1], 'g^',\n",
+    "             x_axis, data_stats[:, 2], 'r.')\n",
+    "    plt.title('Patient Arthritis Data')\n",
+    "    plt.xlabel('Patient Number')\n",
+    "    plt.ylabel('Plasma Inflammation Units')\n",
+    "    out_name = base_f_name + \".png\"\n",
+    "    plt.savefig(out_name)\n",
+    "    print(\"Wrote file: {}\".format(out_name))\n",
+    "\n",
+    "\n",
+    "def main(argv=None):\n",
+    "    args, ret = parse_cmdline(argv)\n",
+    "    if ret != SUCCESS:\n",
+    "        return ret\n",
+    "    data_stats = data_analysis(args.csv_data)\n",
+    "\n",
+    "    # get the name of the input file without the directory it is in, if one was specified\n",
+    "    base_out_fname = os.path.basename(args.csv_data_file)\n",
+    "    # get the first part of the file name (omit extension) and add the suffix\n",
+    "    base_out_fname = os.path.splitext(base_out_fname)[0] + '_stats'\n",
+    "    # add suffix and extension\n",
+    "    out_fname = base_out_fname + '.csv'\n",
+    "    np.savetxt(out_fname, data_stats, delimiter=',')\n",
+    "    print(\"Wrote file: {}\".format(out_fname))\n",
+    "\n",
+    "    # send the base_out_fname and data to a new function that will plot the data\n",
+    "    plot_stats(base_out_fname, data_stats)\n",
+    "    return SUCCESS  # success\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    status = main()\n",
+    "    sys.exit(status)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This gives us the following plot:\n",
+    "![Lect08 Snapshot](images/lect08_basic-stats-plot.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next up: More on numpy, plotting, testing, and the power of the cookiecutter package!"
    ]
   }
  ],
