Fixed typo on HW04, added HW05

--- a/source/notebooks/HW04.ipynb
+++ b/source/notebooks/HW04.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# HW3, practice with Git and IntelliJ\n",
+    "# HW4, practice with Git\n",
     "\n",
     "This assignment (one long question) reviews materials in lectures 6 and 7.\n",
     "\n",
